# security-corpus

./: .gitignore  README.md  pyproject.toml
regmix/buckets/: dataset.py  registry.py
regmix/config/: buckets.yaml  experiment.yaml
regmix/evaluation/: validator.py
regmix/experiments/: schemas.py  tracker.py
regmix/mixtures/: sampler.py  simulator.py
regmix/regression/: evaluator.py  models.py
regmix/scripts/: 01_prepare_buckets.py  02_sample_mixtures.py  03_run_proxy_jobs.py  04_fit_regression.py  05_simulate_and_select.py
regmix/training/: proxy_runner.py
scripts/: arxiv_download_sources.py  arxiv_harvest_metadata.py  arxiv_normalize_sources.py  classify_youtube_channels.py  export_bron.py  export_github_advisory.py  export_youtube_transcripts.py  extract_youtube_channels.py  ingest.py  ingest_arxiv.py  ingest_bron.py  ingest_capec.py  ingest_cisa_kev.py  ingest_cloudtrail.py  ingest_github_advisory.py  ingest_mitre_attack.py  ingest_mitre_cwe.py  ingest_nvd.py  ingest_reddit.py  ingest_sigma.py  ingest_stackexchange.py  ingest_stackexchange_infosec.py  ingest_stackoverflow.py  ingest_youtube_transcripts.py  inspect_records.py
scripts/arxiv/: citation_expand.py  download_sources.py  harvest_citation_metadata.py  harvest_metadata.py  (+1 more)
tests/: test_arxiv_connector.py  test_bron_connector.py  test_capec_connector.py  test_cisa_kev_connector.py  test_cloudtrail_connector.py  test_data_quality.py  test_github_advisory_connector.py  test_mitre_attack_connector.py  test_mitre_cwe_connector.py  test_nvd_connector.py  test_readers.py  test_reddit_subreddit_connector.py  test_sigma_connector.py  test_stackexchange_infosec_connector.py  test_stackexchange_site_connector.py  test_stackoverflow_connector.py  test_utils.py  test_youtube_transcripts_connector.py
(+78 files in other folders)
