[project]
name = "security-corpus"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "ijson", 
    "pydantic",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "data_quality: tests that run against ingested Parquet output (slow, requires bulk load)",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"