[project]
name = "security-corpus"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "ijson",
    "lxml",
    "pydantic",
    "pyarrow",
    "beautifulsoup4",
    "markdownify",
    "tiktoken",
    "zstandard",
    "sickle>=0.7.0",
    "xmltodict",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
markers = [
    "data_quality: tests that run against ingested Parquet output",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"