[project]
name = "security-corpus"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "duckdb",
    "ijson",
    "lxml",
    "pydantic",
    "pyarrow",
    "beautifulsoup4",
    "markdownify",
    "tiktoken",
    "zstandard",
    "sickle>=0.7.0",
    "xmltodict",
    "pypdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
security-corpus-ingest = "ingest.commands:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "data_quality: tests that run against ingested Parquet output",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
